fixed the cards wrap for desktop

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,1 @@
-.body{
-  height: 100vh;
-}
-.rudresh{
-  display: flex;
-}
+  
