--- a/src/components/dashboard/Main.css
+++ b/src/components/dashboard/Main.css
@@ -1,12 +1,13 @@
 .main{
-    background-color: #f9f7f7;
-    height: 91.5vh;
-    width: 100%;
-    margin-top: 1rem;
-    display: flex;
-    /* wrap */
-    flex-wrap: wrap;
+    background-color: #F0F0F0;
+    max-width: 100%;
+    margin: 0 auto;
 
+}
+
+.home-card{
+    display: flex;
+    flex-wrap: wrap;
 }
 .mainCard{
 
@@ -37,3 +38,27 @@ border-radius: 0.5rem;
     font-size: 0.8rem;
     margin-left: 0.5rem;
 }
+
+/* Media queries for Mobile */
+@media (max-width:756px){
+    .main{
+        background-color: #F0F0F0;
+        
+    
+
+    }
+
+    .home-card{
+        display: flex;
+        max-width: 100%;
+        margin: 0 auto;
+        flex-direction: column;
+        justify-content: center;
+    }
+   
+
+
+    
+   
+}
+
