--- a/src/components/dashboard/Sidebar.css
+++ b/src/components/dashboard/Sidebar.css
@@ -1,5 +1,5 @@
 .Sidebar{
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     width: 30vh;
     height: 100vh;
 }
@@ -83,4 +83,14 @@
     gap: 0.5rem;
     padding: 0.5rem 0.5rem;
     font-size: 0.8rem;
+}
+
+/* Media Queries for Mobile */
+
+@media (max-width:756px){
+    .Sidebar{
+       display: none;
+    }
+
+    
 }
